--- a/components/BrowserBar.module.css
+++ b/components/BrowserBar.module.css
@@ -14,22 +14,22 @@
   width: 30%;
   z-index: 1;
   transition: opacity 0.3s;
-  min-width : 250px;
   border: 2px dashed #ccc;
+  height: 100%;
 }
 .BrowserBar_head {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px 18px 0;
-  height: 50px;
+  padding: 10px 18px 0;
+  height: 35px;
 }
 .BrowserBar_head i {
   color: #000;
   font-size: 30px;
 }
 .BrowserBar_head p {
-  font-size: 20px;
+  font-size: 18px;
   font-weight: 500;
   color: #000;
 }
@@ -187,7 +187,7 @@
   margin-bottom: 16px;
 }
 .Prompt_wrap .Material_list {
-  width: max-content;
+  width: m-content;
   display: flex;
   gap: 10px;
 }
