--- a/components/BrowserBar.module.css
+++ b/components/BrowserBar.module.css
@@ -1,28 +1,27 @@
 .BrowserBar_wrap {
   height: calc(100vh - 64px);
-  width: 410px;
+  width: 450px;
   max-height: 920px;
-  position: flex;
+  position: fixed;
   overflow: hidden;
   justify-content: space-between;
-  display: relative;
 
   /* border: 2px dashed #ce1010; */
 }
 
 .BrowserBar_box {
-  width: 30%;
+  width: 350px;
   z-index: 1;
   transition: opacity 0.3s;
   border: 2px dashed #ccc;
-  height: 100%;
+  height: 90%;
 }
 .BrowserBar_head {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 10px 18px 0;
-  height: 35px;
+  height: 50px;
 }
 .BrowserBar_head i {
   color: #000;
@@ -126,7 +125,6 @@
   border: solid 0.2px #757575;
   background-color: #f0f1f0;
   transition: all 0.3s;
-
 }
 .Prompt_wrap .Pre_set_btn:hover {
   background-color: #b4b4b4;
